--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,39 @@
   font-size: 14px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.edit-btn{
+  padding: 4px 8px;
+  border: none;
+  outline: none;
+  background: #f2f2f2;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.btn-active {
+  background: #007bff;
+  color: white;
+  font-weight: bold;
+}
+
+.formatting-buttons {
+  display: flex-col;
+  align-items: center;
+}
+
+.format-1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 4px;
+}
+.format-2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .editable {
   min-height: 100%;
   width: 100%;
@@ -63,11 +96,7 @@
   overflow-wrap: break-word;
 }
 
-.formatting-buttons .btn {
-  margin: 0 4px;
-  font-weight: bold;
-}
-.formatting-buttons .btn {
+.formatting-buttons .edit-btn {
   margin: 0 4px;
   padding: 4px 8px;
   font-weight: bold;
