--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,8 @@
 }
 
 .controls-container {
-   /* 8px */
   display: flex;
-  gap: 20px; /* 8px */
+  gap: 20px;
   align-items: center;
   justify-content: center;
   font-family: serif;
@@ -55,8 +54,8 @@ body{
 .btn {
   color: white;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  padding: 7px 0px; /* 4px 8px */
-  border-radius: 0.25rem; /* 4px */
+  padding: 7px 0px;
+  border-radius: 0.25rem;
   border: none;
   cursor: pointer;
   background-color:#3b82f6;
@@ -163,8 +162,8 @@ body{
 }
 
 .header-cell-top-left {
-  width: 3rem; /* 48px */
-  height: 2.5rem; /* 40px */
+  width: 3rem;
+  height: 2.5rem;
   position: sticky;
   top: 0;
   left: 0;
@@ -176,7 +175,6 @@ body{
   border-right: 1px solid #e5e7eb;
 }
 
-
 .col-resize-handle {
   background: transparent;
   position: absolute;
@@ -187,11 +185,11 @@ body{
   cursor: col-resize;
 }
 .row-header-cell {
-  width: 3rem; /* 48px */
+  width: 3rem;
   border-top: 1px solid #e5e7eb;
   border-bottom: 1px solid #e5e7eb;
   border-right: 1px solid #e5e7eb;
-  padding: 0.5rem; /* Added padding */
+  padding: 0.5rem;
   text-align: center;
   font-weight: bold;
   position: sticky;
@@ -201,17 +199,12 @@ body{
   transition: background-color 0.2s ease-in-out, font-weight 0.2s ease-in-out;
 }
 
-.table-row:focus-within .row-header-cell {
-  background-color: #cce5ff;
-  font-weight: bold;
-}
-
 .row-resize-handle {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 4px; /* h-1 */
+  height: 4px;
   cursor: row-resize;
 }
 
@@ -219,21 +212,21 @@ body{
   border-right: 1px solid #e5e7eb;
   border-bottom: 1px solid #e5e7eb;
   padding: 0;
-  transition: background-color 0.2s ease; /* Added transition */
+  transition: background-color 0.2s ease;
   background-color: white;
 }
 
 .table-cell:hover {
-  background-color: rgb(233, 233, 233); /* Light grey on hover */
+  background-color: rgb(233, 233, 233);
 }
 
 .cell-input {
   width: 100%;
   height: 100%;
-  padding-left: 0.5rem; /* 8px */
-  padding-right: 0.5rem; /* 8px */
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   border: none;
-  box-sizing: border-box; /* Ensures padding is included in element's total width and height */
+  box-sizing: border-box;
   transition: box-shadow 0.2s ease;
   
   background: transparent;
@@ -241,7 +234,7 @@ body{
 
 .cell-input:focus {
   outline: none;
-  box-shadow: inset 0 0 0 2px #3b82f6; /* Blue ring on focus */
+  box-shadow: inset 0 0 0 2px #3b82f6;
 }
 
 .focused-cell-info {
@@ -257,7 +250,6 @@ body{
   font-size: 14px;
 }
 
-/* Custom scrollbar styles */
 .table-container::-webkit-scrollbar {
   width: 8px;
   height: 8px;
